Stopped the sure start logo taking up the whole page if it gets too small

--- a/theme-bootstrap/stylesheets/harpurs.css
+++ b/theme-bootstrap/stylesheets/harpurs.css
@@ -37,6 +37,10 @@ td, th {
 	padding: 5px 0px;
 }
 
+ul {
+    margin: 28px 0px;
+}
+
 .brand, .navbar, .footer {
 	font-family: 'Varela Round', sans-serif;
 }
